--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
     <main class="main">
       <section>
         <h1>Add new entry</h1>
-        <form class="form"  method="POST">
+        <form class="form" method="POST">
           <p class="form__input">
             <label for="entry" class="form__label">Entry contents</label>
             <textarea
@@ -45,11 +45,11 @@
         <article class="entry">
           <div>
             <h2 class="entry__title">{{entry[0] | truncate(30,true)}}</h2>
-            <time class="entry__date" datetime="24-10-2019"> {{entry[1]}}</time>
+            <time class="entry__date" datetime="{{entry[1]}}">
+              {{entry[2]}}</time
+            >
           </div>
-          <p class="entry__content">
-              {{entry[0]}}
-          </p>
+          <p class="entry__content">{{entry[0]}}</p>
         </article>
         {% endfor %}
       </section>
